--- a/public/index.html
+++ b/public/index.html
@@ -4,22 +4,52 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Secret Santa</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f0f8ff;
+      color: #333;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+    h1 {
+      color: #ff4500;
+      margin-top: 20px;
+    }
+    p {
+      color: #006400;
+    }
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 24px;
+      }
+      p {
+        font-size: 16px;
+      }
+    }
+  </style>
   <script>
-    async function checkLoginStatus() {
-      const response = await fetch('/user-data');
-      const userData = await response.json();
-
-      if (userData.loggedIn) {
-        window.location.href = '/dashboard';
-      } else {
+    async function fetchUserData() {
+      try {
+        const response = await fetch('/api/user-data');
+        const data = await response.json();
+        if (data.loggedIn) {
+          window.location.href = '/user-dashboard.html';
+        } else {
+          window.location.href = '/login';
+        }
+      } catch (error) {
+        console.error('Error fetching user data:', error);
         window.location.href = '/login';
       }
     }
 
-    document.addEventListener('DOMContentLoaded', checkLoginStatus);
+    document.addEventListener('DOMContentLoaded', fetchUserData);
   </script>
 </head>
 <body>
   <h1>Welcome to Secret Santa</h1>
+  <p>Hello, <span id="username"></span></p>
 </body>
 </html>
