--- a/public/profile.html
+++ b/public/profile.html
@@ -13,18 +13,17 @@
         window.location.href = '/';
       }
     });
+
+    async function logout() {
+      localStorage.removeItem('user');
+      await fetch('/api/logout', { method: 'POST' });
+      window.location.href = '/';
+    }
   </script>
 </head>
 <body>
   <h1>User Profile</h1>
   <p>Username: <span id="username"></span></p>
   <button onclick="logout()">Logout</button>
-
-  <script>
-    function logout() {
-      localStorage.removeItem('user');
-      window.location.href = '/';
-    }
-  </script>
 </body>
 </html>
